--- a/Backend/Backend/appsettings.json
+++ b/Backend/Backend/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "RegFormDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
