--- a/Backend/Backend/appsettings.json
+++ b/Backend/Backend/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "MongoDbSettings": {
+    "CollectionName": "Registration",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "RegFormDb"
   },
